Adding Highlights for CDSH 2.35.0